update of yaml and ebook
